# QtQuickTaskApp

./: .gitignore  AUTOMATION_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  TIMETABLE_FEATURE.md  TIMETABLE_GUIDE.md  TIMETABLE_VISUAL.md
_codeql_build_dir/QtQuickTaskApp_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/QtQuickTaskApp_autogen/GQ6NBGVJMG/: moc_settingsstore.cpp.d
_codeql_build_dir/QtQuickTaskApp_autogen/M4YTXQ7V2H/: moc_taskmodel.cpp.d
_codeql_build_dir/QtQuickTaskApp_autogen/METKDVI4SS/: moc_appcontroller.cpp.d
demos/: generate_sample_timetable_data.py  sample_tasks.json
demos/automation-scripts/: debug_controls.py  e2e_test.py
examples/automation/: README.md  atspi_demo.py  complete_test.py  complete_test.robot  demo_automation.py  demo_test.robot  pywinauto_demo.py
qml/: AppTheme.qml  LoginPage.qml  Main.qml  MainPage.qml  qml.qrc
qml/components/: PreferencesDialog.qml
qml/dialogs/: TaskNotesDialog.qml  WorkoutDetailsDialog.qml
qml/screens/: AppEntry.qml  LoginPage.qml  MainPage.qml  TimetableView.qml
src/: appcontroller.cpp  appcontroller.h  main.cpp  settingsstore.cpp  settingsstore.h  taskmodel.cpp  taskmodel.h
src/controllers/: appcontroller.cpp  appcontroller.h
src/models/: taskmodel.cpp  taskmodel.h
src/services/: settingsstore.cpp  settingsstore.h
